Fix overflow for photo list

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,5 +20,6 @@
 
   .router-outlet-wrapper {
     flex: 1 1;
+    overflow-y: auto;
   }
 }
